Revert "perf: 取消统计"
This reverts commit d946317797358ba8db0d2e3b99aebd078cc4b2a6.

--- a/one/config.json
+++ b/one/config.json
@@ -57,6 +57,13 @@
       "group": "展示",
       "value": false,
       "type": "switch"
+    },
+    {
+      "name": "busuanzi",
+      "label": "不蒜子访问统计",
+      "group": "展示",
+      "value": false,
+      "type": "switch"
     }
   ]
 }
